# shelf_solver

./: CMakeLists.txt  README.md  main.cpp  shelf_solver.cpp  shelf_solver.hpp
.github/workflows/: nightly.yml
Scene/1/: SpecialGuestData.tab  customerConstData.tab
Scene/2/: SpecialGuestData.tab  buildConstData.json  customerConstData.tab  sceneConstDataList.tab
Scene/3/: SpecialGuestData.tab  buildConstData.json  customerConstData.tab  sceneConstDataList.tab
Scene/4/: SpecialGuestData.tab  buildConstData.json  customerConstData.tab  sceneConstDataList.tab
Scene/5/: SpecialGuestData.tab  buildConstData.json  customerConstData.tab  sceneConstDataList.tab
Scene/6/: SpecialGuestData.tab  buildConstData.json  customerConstData.tab  expandConstData.tab  sceneConstDataList.tab
Scene/7/: SpecialGuestData.tab  buildConstData.json  customerConstData.tab  sceneConstDataList.tab
Scene/999/: buildConstData.json  sceneConstDataList.tab
scripts/: embed_maps.py
